CGIV-4433 - Fix the align on the enable button

--- a/public/channelgrabber/settings/scss/_invoicesettings.scss
+++ b/public/channelgrabber/settings/scss/_invoicesettings.scss
@@ -141,8 +141,8 @@
 }
 
 .enable_switch {
-    top: -10px;
-    position: relative;
+    width: 105px;
+    margin: auto;
 }
 
 .product-images-invoice-holder {
